# cppCollider

./: .gitignore  CMakeLists.txt  Makefile  README.md  helloSc.cpp  test.scd
